export class Media{
    _id: String;
    name: String;
    type: String;
}