import { Media } from './Media';

export class Video extends Media{
    url: String;
    title: String;
    Platform:String;
}