export class Image {
    fieldname: string;
    originalname: string;
    name: string;
    md5: string;
    encoding: string;
    mimetype: string;
    destination: string;
    filename: string;
    path: string;
    size: number;
    created_at: Date;

    
}

