import { Image } from '../Common/Image';

export class Rewards {
    Image: Image;
    type: String;
    name: String;
    threshold: Number;
}