export class SocialMedia{
    type: String;
    tag: String;
}