@startuml User
skinparam monochrome true


package Content{
    class Post extends Article{
    }
    class Vote{
        upVote : boolean
        timeOfVote : Date
        Owner : Creator
        parent : Article
    }
    class Fundraiser extends Article{
        description: String
        category: String
        fundGoal : Double
        raisedFunds : Double
        endDate : Date
        funders : Creator[]
        rewards: Rewards[]
    }

    class Comment extends Article{
        parent: Article
    }
    class Article{
        _id : String
        owner : Creator
        type : String
        content: String
        votes : Vote[]
        comments : Comment[]
        media : Media[]
        createdAt : Date

    }
    class Media{
        _id : String
        name : String


    }
    class Image extends Media{
        hash : String
        sha256 : String
        ext : String
        mime : String
        size : 0
        url : String
        provider : String
        provider_metadata : {}
        related : String

    }
    class Video extends Media{
        url: String
        title : String
        platform : String
    }
    class Reward {
        image: Image
        type: String
        name: String
        threshold: Double
    }
    Article o-* Vote
    Article *-right-* Comment
    Fundraiser o-left- Post
    Article o-- Media

}
package Chat {

    class MessageBox{
        _id: String
        conversations: Conversation[]
    }
    class Conversation{
        _id: String
        messages: Message[]
        participants: Creator[]
    }
    class Message{
        _id: String
        sent_time: Date
        received_time: Date
        read: Date
        read_by: Creator[]
        delivred_to: Creator[]
        owner: Creator
    }


}

package User{

    class User {
        _id: String
        username: String
        password: String
        email: String
        isVerified: boolean
    }

    

    class Creator{
        _id : String
        profile_picture: Image
        user_id: String
        creator_tag: String
        personalInformation: PersonalInformation;
        paymentInformation: PaymentInformation
        Fundraisers : Fundraiser[]
        following : Creator[]
        followers : Creator[]
        socialMedia : ContactMe[]
        posts : Post[]
        messageBox : MessageBox
        fundedFundraisers : Fundraiser[]
    }

    class Visitor extends User{

    }

    class Location{
        country : Country
        state : State
        city : City
        line1 : String
        line2 : String
        zipCode : String
        longitude : Double
        latitude : Double
    }

    class SocialMedia{
        type: String
        tag: String
    }

    class PersonalInformation{
        first_name: String
        last_name: String
        bio:String
        birth_date: Date
        address: Location

    }
}



MessageBox  *--*  Creator

Article  *--*  Creator

Creator *--* Location
Creator *-- PersonalInformation
Vote  *---*  Creator
Creator o-- User
MessageBox  *-down-  Conversation
Message  *-up-*  Conversation


@enduml
